--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,3 +34,9 @@ a {
 .btn:disabled {
     @apply text-neutral-400 bg-neutral-700;
 }
+
+select, option {
+    color: black;
+    margin: 5px;
+    padding: 5px;
+}
